improved opengl structure

--- a/port/nacl/Makefile
+++ b/port/nacl/Makefile
@@ -57,7 +57,7 @@ sources = $(wildcard ./../../src/*.c)
 sources += $(wildcard ./../../src/system/*.c)
 sources += $(wildcard ./../../src/input/*.c)
 sources += $(wildcard ./../../src/math/*.c)
-sources += $(wildcard ./../../src/graphic/*.c)
+#sources += $(wildcard ./../../src/graphic/*.c)
 #sources += $(wildcard ./../../src/pnacl/*.c)
 
 
@@ -87,6 +87,9 @@ debug : $(objects)
 	$(NACL_AR) -rcs $(subst .c,.o, $^ ) -f $(TARGET).a
 
 
+.PHONY : pnacl
+.PHONY : nacl
+
 nacl : CLFAGS += -O2 -DNACL=1
 nacl : CLIBS += 
 nacl : CC := $(NACL_CXX)
@@ -96,15 +99,16 @@ nacl : $(objects)
 		
 
 
-.PHONY : pnacl
+
 pnacl : CFLAGS += -O -DPNACL=1 -DEX_PNACL=1
 pnacl : CC := $(PNACL_CXX)
 pnacl : CFLAGS += -I"$(NACL_SDK_ROOT)/include/newlib"
 pnacl : pnaclsource = $(subst .c,.c $(wildcard ./../../src/pnacl/*.c))
 pnacl : $(objects) $(pnaclsource)
 	$(MKDIR2) build
-	$(PNACL_AR) -rcs $^ -f $(TARGET).a
+	$(PNACL_AR) cr $(TARGET).a $^ 
 	$(PNACL_RANLIB) $(TARGET).a
+	@du -h $(TARGET).a
 
 
 clean : 
