--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,13 @@
-
 cmake_minimum_required(VERSION 2.8)
 project(ELT)
 
 #	build shared/dynamic library option
-option(BUILD_SHARED_LIBS "Build package with shared libraries." ON)
+OPTION (BUILD_SHARED_LIBS "Build package with shared libraries." ON)
 
 if(NOT BUILD_SHARED_LIBS)
 	set(CMAKE_EXE_LINKER_FLAGS "-static")
 	set(LINK_SEARCH_START_STATIC TRUE)	
 endif(NOT BUILD_SHARED_LIBS)
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-INCLUDE_DIRECTORIES(include)
 
 
 set (ELT_VERSION_MAJOR 0)
@@ -20,6 +16,20 @@ set (ELT_VERSION_REVISION 64)
 set (ELT_VERSION ${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}.${ELT_VERSION_REVISION})
 
 set (PROJECT_VERSION "${ELT_VERSION}")
+
+set(ELT_PACKAGE_VERSION "0" CACHE STRING "the package-specific version used for uploading the sources.")
+
+
+
+
+
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+INCLUDE_DIRECTORIES(./include)
+
+
+
+OPTION (ELT_OPT_BUILD_PACKAGE "Set to ON to generate CPack configuration files and packaging targets" OFF)
+
 
 add_definitions(-D_INTERNAL_ENGINE=1)
 
@@ -34,6 +44,7 @@ add_definitions(-DREVISION_VERSION=${ELT_VERSION_REVISION})
 
 
 
+
 if(CMAKE_COMPILER_IS_MINGW)
 	#ADD_DEFINITIONS(
 endif()
@@ -41,15 +52,31 @@ endif()
 
 #	gnu compiler
 if((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)
-	if(BUILD_SHARED_LIBS)
+	IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
 		add_definitions(-fPIC)
 	endif()
-	add_definitions(-fvisibility=hidden -Wall)
+	add_definitions( -fvisibility=hidden )
+	add_definitions( -Wall )
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -Wall" )
 elseif(MSVC)
 	add_definitions(/MP)
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+
+	FIND_PACKAGE( DirectX )
+
 endif()
 
+
+IF (CMAKE_BUILD_TYPE STREQUAL "Release")
+  SET(CMAKE_DEBUG_POSTFIX "" CACHE STRING "Debug Postfix for lib, samples and tools")
+ELSE()
+  SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Debug Postfix for lib, samples and tools")
+ENDIF()
+
+IF ( NOT TARGET uninstall)
+
+
+ENDIF()
 
 
 
@@ -100,6 +127,12 @@ endif()
 
 
 
+# Generate a pkg-config .pc for the Assimp library.
+#CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/elt.pc.in" "${PROJECT_BINARY_DIR}/elt.pc" @ONLY )
+#INSTALL( FILES "${PROJECT_BINARY_DIR}/elt.pc" DESTINATION ${ASSIMP_LIB_INSTALL_DIR}/pkgconfig/ COMPONENT ${LIBASSIMP-DEV_COMPONENT})
+
+
+
 
 
 # TODO make it compadiable for what platform to port to.
@@ -118,4 +151,18 @@ target_link_libraries(EngineEx GL X11 OpenCL)
 # add the install targets
 install (TARGETS EngineEx DESTINATION lib)
 install (FILES include/*.h DESTINATION include)
+
+
+
+
+
+#debian package
+IF (CMAKE_CPACK_COMMAND AND UNIX AND ASSIMP_OPT_BUILD_PACKAGES)
+
+
+
+ENDIF()
+
+
+#install(FILES "${CMAKE_CURRENT_BINARY_DIR}/elt-config.
 
