Minor improvements and started to add cpack debian package.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(ELT)
 
+
 #	build shared/dynamic library option
 OPTION (BUILD_SHARED_LIBS "Build package with shared libraries." ON)
 
@@ -154,14 +155,64 @@ install (FILES include/*.h DESTINATION include)
 
 
 
-
-
 #debian package
-IF (CMAKE_CPACK_COMMAND AND UNIX AND ASSIMP_OPT_BUILD_PACKAGES)
+IF (CMAKE_CPACK_COMMAND AND UNIX )
+	SET(CPACK_PACKAGE_NAME	"ELT")
+	SET(CPACK_PACKAGE_CONTACT "" CACHE STRING "Package maintainer and PGP signer.")
+	SET(CPACK_PACKAGE_VENDOR "")
+	SET(CPACK_PACKAGE_DISPLAY_NAME "")
+	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
+	SET(CPACK_PACKAGE_VERSION "")
+	SET(CPACK_PACKAGE_VERSION_MAJOR "")
+	SET(CPACK_PACKAGE_VERSION_MINOR "")
+	SET(CPACK_PACKAGE_VERSION_PATCH "")
+	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "")
+	SET(CPACK_RESOURCE_FILE_LICENSE "LICENSE")
 
 
+	#SET(CPACK_
 
+	#debian
+	SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+	SET(CPACK_DEBIAN_CMAKE_OPTIONS "")
+	SET(CPACK_DEBIAN_PACKAGE_SECTION "libs")
+	SET(CPACK_DEBIAN_DEPEND "")
+	SET(CPACK_DEBIAN_PACKAGE_SUGGETS)
+	SET(CPACK_DEBIAN_PACKAGE_NAME "elt")
+	SET(CPACK_DEBIAN_PACKAAGE_REMOVE_SOURCE_FILES )
+	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY )
+	SET(CPACK_DEBIAN_CHANGELOG)
+
+	SET(CPACK_DEBIAN_DISTRIBUTION_NAME )
+	
+	execute_process(COMMAND lsb_release -is
+	    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
+	    RESULT_VARIABLE _lsb_release_failed)
+	  set(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
+	string(TOLOWER ${CPACK_DEBIAN_DISTRIBUTION_NAME} CPACK_DEBIAN_DISTRIBUTION_NAME)
+	if( ${CPACK_DEBIAN_DISTRIBUTION_NAME} STREQUAL "ubuntu" )
+		SET(CPACK_DEBIAN_DISTRUBTION_RELEASES lucid maveric natty oneiric previse CACHE STRING "Release code-names of distrubtions release")
+	endif()
+	set(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
+	INCLUDE(CPack)
+	#INCLUDE(DebSourcePPA)
+		
 ENDIF()
+
+
+if(WIN32)
+	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin64/")
+		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib64/")
+	elseif()
+		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin32/")
+		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib32/")
+	endif()
+	
+	add_custom_target(UpdateELTLibDebugSymbolsAndDLLs COMMENT "Copying ELT Libraries ..." VERBATIM)
+
+
+endif(WIN32)
 
 
 #install(FILES "${CMAKE_CURRENT_BINARY_DIR}/elt-config.
