--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,9 +128,7 @@ endif()
 
 
 
-# Generate a pkg-config .pc for the Assimp library.
-#CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/elt.pc.in" "${PROJECT_BINARY_DIR}/elt.pc" @ONLY )
-#INSTALL( FILES "${PROJECT_BINARY_DIR}/elt.pc" DESTINATION ${ASSIMP_LIB_INSTALL_DIR}/pkgconfig/ COMPONENT ${LIBASSIMP-DEV_COMPONENT})
+
 
 
 
@@ -145,68 +143,94 @@ FILE(GLOB _srcFiles
 	"src/system/unix/*.c"
 )
 
+FILE(GLOB includes		"include/*.h")
+FILE(GLOB systeminclude 	"include/system/*.h")
+FILE(GLOB inputinclude 		"include/input/*.h")
+FILE(GLOB unixinclude 		"include/system/unix/*.h")
+
 add_library(EngineEx ${_srcFiles})
 target_link_libraries(EngineEx GL X11 OpenCL)
 
 
 # add the install targets
 install (TARGETS EngineEx DESTINATION lib)
-install (FILES include/*.h DESTINATION include)
+install (FILES ${includes} DESTINATION include/ELT)
+install (FILES ${systeminclude} DESTINATION include/ELT/system)
+install (FILES ${inputinclude} DESTINATION include/ELT/input)
+install (FILES ${unixinclude} DESTINATION include/ELT/system/unix)
+#install (FILES ${includes} DESTINATION include/ELT)
+#install (FILES ${includes} DESTINATION include/ELT)
 
 
+
+# Generate a pkg-config .pc for the Assimp library.
+#CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/elt.pc.in" "${PROJECT_BINARY_DIR}/elt.pc" @ONLY )
+#INSTALL( FILES "${PROJECT_BINARY_DIR}/elt.pc" DESTINATION ${ASSIMP_LIB_INSTALL_DIR}/pkgconfig/ COMPONENT ${LIBASSIMP-DEV_COMPONENT})
 
 #debian package
+#ELT_OPT_BUILD_PACKAGE
 IF (CMAKE_CPACK_COMMAND AND UNIX )
+
+	SET(CPACK_GENERATOR "DEB")
+	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
+
 	SET(CPACK_PACKAGE_NAME	"ELT")
 	SET(CPACK_PACKAGE_CONTACT "" CACHE STRING "Package maintainer and PGP signer.")
-	SET(CPACK_PACKAGE_VENDOR "")
-	SET(CPACK_PACKAGE_DISPLAY_NAME "")
-	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
-	SET(CPACK_PACKAGE_VERSION "")
-	SET(CPACK_PACKAGE_VERSION_MAJOR "")
-	SET(CPACK_PACKAGE_VERSION_MINOR "")
-	SET(CPACK_PACKAGE_VERSION_PATCH "")
-	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "")
-	SET(CPACK_RESOURCE_FILE_LICENSE "LICENSE")
+	SET(CPACK_PACKAGE_VENDOR "http://elt.linuxsenpai.org/")
+	SET(CPACK_PACKAGE_DISPLAY_NAME "ELT ${ELT_VERSION}")
+	SET(CPACK_PACKAGE_DESCRIPTION "ELT (Engine Library Toolkit)")
+	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY " ELT (Engine Library Toolkit)")
+	SET(CPACK_PACKAGE_VERSION "${ELT_VERSION}")
+	SET(CPACK_PACKAGE_VERSION_MAJOR "${ELT_VERSION_MAJOR}")
+	SET(CPACK_PACKAGE_VERSION_MINOR "${ELT_VERSION_MINOR}")
+	SET(CPACK_PACKAGE_VERSION_PATCH "${ELT_VERSION_REVISION}")
+	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "assimp${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}")
+	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 
 
 	#SET(CPACK_
+	SET(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake libboost-dev libboost-thread-dev libboost-math-dev zlib1g-dev pkg-config)
 
 	#debian
 	SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 	SET(CPACK_DEBIAN_CMAKE_OPTIONS "")
 	SET(CPACK_DEBIAN_PACKAGE_SECTION "libs")
-	SET(CPACK_DEBIAN_DEPEND "")
-	SET(CPACK_DEBIAN_PACKAGE_SUGGETS)
+	SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "mesa-common-dev libx11-dev libx11-xcb-dev libegl1-mesa-dev libxrandr-dev libgles2-mesa-dev libopenal-dev libxi-dev libudev-dev libglu1-mesa-dev libasound2-dev")
+	SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "")
 	SET(CPACK_DEBIAN_PACKAGE_NAME "elt")
-	SET(CPACK_DEBIAN_PACKAAGE_REMOVE_SOURCE_FILES )
+	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt")
+	#SET(CPACK_CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES samplers docs)
 	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY )
 	SET(CPACK_DEBIAN_CHANGELOG)
+
 
 	SET(CPACK_DEBIAN_DISTRIBUTION_NAME )
 	
 	execute_process(COMMAND lsb_release -is
 	    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _lsb_release_failed)
-	  set(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
+
+	SET(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
 	string(TOLOWER ${CPACK_DEBIAN_DISTRIBUTION_NAME} CPACK_DEBIAN_DISTRIBUTION_NAME)
 	if( ${CPACK_DEBIAN_DISTRIBUTION_NAME} STREQUAL "ubuntu" )
 		SET(CPACK_DEBIAN_DISTRUBTION_RELEASES lucid maveric natty oneiric previse CACHE STRING "Release code-names of distrubtions release")
 	endif()
+
 	set(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
 	INCLUDE(CPack)
-	#INCLUDE(DebSourcePPA)
+	#include(DebSourcePPA)
 		
 ENDIF()
 
 
 if(WIN32)
 	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin64/")
-		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib64/")
+		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin64/)
+		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib64/)
 	elseif()
-		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin32/")
-		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib32/")
+		set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin32/)
+		set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib32/)
 	endif()
 	
 	add_custom_target(UpdateELTLibDebugSymbolsAndDLLs COMMENT "Copying ELT Libraries ..." VERBATIM)
