--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.12)
 project(ELT)
 
 
@@ -13,7 +13,7 @@ endif(NOT BUILD_SHARED_LIBS)
 
 set (ELT_VERSION_MAJOR 0)
 set (ELT_VERSION_MINOR 6)
-set (ELT_VERSION_REVISION 64)
+set (ELT_VERSION_REVISION 65)
 set (ELT_VERSION ${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}.${ELT_VERSION_REVISION})
 
 set (PROJECT_VERSION "${ELT_VERSION}")
@@ -143,25 +143,38 @@ FILE(GLOB _srcFiles
 	"src/system/unix/*.c"
 )
 
-FILE(GLOB includes		"include/*.h")
-FILE(GLOB systeminclude 	"include/system/*.h")
-FILE(GLOB inputinclude 		"include/input/*.h")
-FILE(GLOB unixinclude 		"include/system/unix/*.h")
+
+SOURCE_GROUP( core 	FILES "src/*.c" "src/system/*.c")
+SOURCE_GROUP( windows 	FILES "src/system/win/*.c")
+SOURCE_GROUP( android 	FILES "src/system/android/*.c")
+SOURCE_GROUP( nacl	FILES "src/nacl/*.c")
+SOURCE_GROUP( unix	FILES "src/system/unix/*.c")
+SOURCE_GROUP( mac	FILES "src/system/mac/*.c")
+
+FILE(GLOB includes		"${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
+FILE(GLOB systeminclude 	"${CMAKE_CURRENT_SOURCE_DIR}/include/system/*.h")
+FILE(GLOB inputinclude 		"${CMAKE_CURRENT_SOURCE_DIR}/include/input/*.h")
+FILE(GLOB unixinclude 		"${CMAKE_CURRENT_SOURCE_DIR}/include/system/unix/*.h")
+FILE(GLOB windowsinclude 	"${CMAKE_CURRENT_SOURCE_DIR}/include/system/win/*.h")
+FILE(GLOB graphicinclude 	"${CMAKE_CURRENT_SOURCE_DIR}/include/graphic/*.h")
 
 add_library(EngineEx ${_srcFiles})
-target_link_libraries(EngineEx GL X11 OpenCL)
+target_link_libraries(EngineEx libGL.so libX11.so libOpenCL.so)
+
+
 
 
 # add the install targets
-install (TARGETS EngineEx DESTINATION lib)
-install (FILES ${includes} DESTINATION include/ELT)
-install (FILES ${systeminclude} DESTINATION include/ELT/system)
-install (FILES ${inputinclude} DESTINATION include/ELT/input)
-install (FILES ${unixinclude} DESTINATION include/ELT/system/unix)
-#install (FILES ${includes} DESTINATION include/ELT)
-#install (FILES ${includes} DESTINATION include/ELT)
-
-
+INSTALL (TARGETS EngineEx DESTINATION lib)
+INSTALL (FILES ${includes} DESTINATION include/ELT)
+INSTALL (FILES ${systeminclude} DESTINATION include/ELT/system)
+INSTALL (FILES ${inputinclude} DESTINATION include/ELT/input)
+INSTALL (FILES ${graphicinclude} DESTINATION include/ELT/graphic)
+IF ( UNIX )
+	INSTALL (FILES ${unixinclude} DESTINATION include/ELT/system/unix)
+ELSEIF (WIN32)
+	INSTALL (FILES ${windowsinclude} DESTINATION include/ELT/system/win)
+ENDIF()
 
 # Generate a pkg-config .pc for the Assimp library.
 #CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/elt.pc.in" "${PROJECT_BINARY_DIR}/elt.pc" @ONLY )
@@ -171,38 +184,44 @@ install (FILES ${unixinclude} DESTINATION include/ELT/system/unix)
 #ELT_OPT_BUILD_PACKAGE
 IF (CMAKE_CPACK_COMMAND AND UNIX )
 
+	IF(UNIX)
 	SET(CPACK_GENERATOR "DEB")
-	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
+	ENDIF()
 
-	SET(CPACK_PACKAGE_NAME	"ELT")
+
+	SET(CPACK_PACKAGE_NAME	"elt")
 	SET(CPACK_PACKAGE_CONTACT "" CACHE STRING "Package maintainer and PGP signer.")
 	SET(CPACK_PACKAGE_VENDOR "http://elt.linuxsenpai.org/")
 	SET(CPACK_PACKAGE_DISPLAY_NAME "ELT ${ELT_VERSION}")
 	SET(CPACK_PACKAGE_DESCRIPTION "ELT (Engine Library Toolkit)")
-	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY " ELT (Engine Library Toolkit)")
+	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY " ELT (Engine Library Toolkit) ${ELT_VERSION} is a multiplatform API.")
 	SET(CPACK_PACKAGE_VERSION "${ELT_VERSION}")
 	SET(CPACK_PACKAGE_VERSION_MAJOR "${ELT_VERSION_MAJOR}")
 	SET(CPACK_PACKAGE_VERSION_MINOR "${ELT_VERSION_MINOR}")
 	SET(CPACK_PACKAGE_VERSION_PATCH "${ELT_VERSION_REVISION}")
-	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "assimp${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}")
+	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "elt${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}")
 	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
-
+	#http://stackoverflow.com/questions/28768417/how-to-set-an-icon-in-nsis-install-cmake
+	#SET(CPACK_PACKAGE_ICON  "${CMAKE_CURRENT_SOURCE_DIR}/elt.ico")
+	SET(CPACK_RESOURCE_FILE_WELCOME )
 
 	#SET(CPACK_
-	SET(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake libboost-dev libboost-thread-dev libboost-math-dev zlib1g-dev pkg-config)
+	SET(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake pkg-config)
 
 	#debian
 	SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 	SET(CPACK_DEBIAN_CMAKE_OPTIONS "")
 	SET(CPACK_DEBIAN_PACKAGE_SECTION "libs")
-	SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
-	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "mesa-common-dev libx11-dev libx11-xcb-dev libegl1-mesa-dev libxrandr-dev libgles2-mesa-dev libopenal-dev libxi-dev libudev-dev libglu1-mesa-dev libasound2-dev")
-	SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "")
+	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE all) #
+	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "mesa-common-dev, libx11-dev, libx11-xcb-dev, libegl1-mesa-dev, libxrandr-dev, libgles2-mesa-dev, libopenal-dev, libxi-dev, libudev-dev, libglu1-mesa-dev, libasound2-dev, libc6 (>= 2.1), opencl-headers")
+	SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "" )
 	SET(CPACK_DEBIAN_PACKAGE_NAME "elt")
-	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt")
-	#SET(CPACK_CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES samplers docs)
-	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY )
-	SET(CPACK_DEBIAN_CHANGELOG)
+	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt-${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}${ELT_VERSION_REVISION}")
+	SET(CPACK_DEBIAN_PACKAGE_SOURCE_FILES ${_srcFiles} )
+	SET(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES build ) #samplers docs
+	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
+	SET(CPACK_DEBIAN_CHANGELOG "" )
+	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
 
 
 	SET(CPACK_DEBIAN_DISTRIBUTION_NAME )
@@ -210,17 +229,18 @@ IF (CMAKE_CPACK_COMMAND AND UNIX )
 	execute_process(COMMAND lsb_release -is
 	    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _lsb_release_failed)
-
-	SET(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
+	  set(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
 	string(TOLOWER ${CPACK_DEBIAN_DISTRIBUTION_NAME} CPACK_DEBIAN_DISTRIBUTION_NAME)
 	if( ${CPACK_DEBIAN_DISTRIBUTION_NAME} STREQUAL "ubuntu" )
-		SET(CPACK_DEBIAN_DISTRUBTION_RELEASES lucid maveric natty oneiric previse CACHE STRING "Release code-names of distrubtions release")
+	    set(CPACK_DEBIAN_DISTRIBUTION_RELEASES lucid maverick natty oneiric precise CACHE STRING "Release code-names of the distrubiton release")
 	endif()
 
-	set(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
+	#set(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
 	INCLUDE(CPack)
-	#include(DebSourcePPA)
+	#INCLUDE(DebSourcePPA)
 		
+	# set(CPACK_DEBIAN_PACKAGE_SECTION devel)
+
 ENDIF()
 
 
