--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -350,6 +350,12 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 	SET(CPACK_COMPONENT_ELT-DEV_DEPENDS                            "${LIBELT-DEV_COMPONENT}" )
 
 
+
+	#	windows installer.	
+	SET(CPACK_NSIS_DISPLAY_NAME "VDEngine")
+
+
+
 	#debian
 	SET(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake pkg-config)
 	SET(CPACK_DEBIAN_PACKAGE_PRIORITY extra)
