--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,13 +103,16 @@ if((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_
 
 
 	ADD_DEFINITIONS( -Wall -w -I"include" -fPIC -DVD_INTERNAL -fpermissive -Wfatal-errors ) 
-	INCLUDE_DIRECTORIES(/usr/include/physx)
 	IF (CMAKE_BUILD_TYPE STREQUAL "Release")
+		MESSAGE(STATUS "Compile for release.")
 		ADD_DEFINITIONS(-DNDEBUG)
 		ADD_DEFINITIONS(-O3)
+		SET(CMAKE_RELEASE TRUE)
 	ELSE()
+		MESSAGE(STATUS "Compile for debug.")
 		ADD_DEFINITIONS(-D_DEBUG)
 		ADD_DEFINITIONS(-g3)
+		SET(CMAKE_DEBUG TRUE)
 	ENDIF()
 
 
