--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,6 +370,7 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 
 	SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "" )
 	SET(CPACK_DEBIAN_PACKAGE_NAME "elt")
+	SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
 	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt-${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}${ELT_VERSION_REVISION}")
 	SET(CPACK_DEBIAN_PACKAGE_SOURCE_FILES ${_srcFiles} )
 	SET(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES build CMakeFiles _CPack_Packages) #samplers docs
@@ -395,6 +396,7 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 	#SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 	INCLUDE(CPack)
  	INCLUDE(DebSourcePPA)
+	#INCLUDE(UploadPPA)
 ENDIF()
 
 #	
