--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ INCLUDE_DIRECTORIES(./include)
 OPTION (ELT_OPT_BUILD_PACKAGE "Set to ON to generate CPack configuration files and packaging targets" ON)
 
 
-add_definitions(-D_INTERNAL_ENGINE=1)
+ADD_DEFINITIONS(-D_INTERNAL_ENGINE=1)
 
 
 # extracing version.
@@ -210,6 +210,10 @@ else()
 endif()
 
 
+#	OpenCL
+IF (CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)")
+ADD_DEFINITIONS(-DDONT_SUPPORT_OPENCL=1)
+ENDIF()
 
 
 
@@ -227,7 +231,7 @@ FILE(GLOB gCore		"${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
 FILE(GLOB gmaths	"${CMAKE_CURRENT_SOURCE_DIR}/src/math/*.c")
 
 FILE(GLOB gunix		"${CMAKE_CURRENT_SOURCE_DIR}/src/system/unix/*.c")
-FILE(GLOB gwin "")
+FILE(GLOB gwin 		"${CMAKE_CURRENT_SOURCE_DIR}/src/system/win/*.c")
 FILE(GLOB gandroid	"")
 FILE(GLOB gnacl	"")
 FILE(GLOB gmac	"")
@@ -304,13 +308,8 @@ ENDIF()
 
 #debug file for windows.
 IF(MSVC)
-  option (ELT_INSTALL_PDB
-    "Install MSVC debug files."
-    ON
-  )
+	OPTION(ELT_INSTALL_PDB "Install MSVC debug files." ON )
 ENDIF(MSVC)
-
-
 
 
 
@@ -355,7 +354,7 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 
 
 	#	windows installer.	
-	SET(CPACK_NSIS_DISPLAY_NAME "VDEngine")
+	SET(CPACK_NSIS_DISPLAY_NAME "elt")
 
 
 
@@ -375,7 +374,6 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 	SET(CPACK_DEBIAN_PACKAGE_SOURCE_FILES ${_srcFiles} )
 	SET(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES build CMakeFiles _CPack_Packages) #samplers docs
 	#SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
-	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY cp )
 	SET(CPACK_DEBIAN_CHANGELOG "" )
 	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
 
@@ -392,8 +390,15 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 
 	SET(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
 
-	#SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE OFF)
-	#SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+
+	SET(CPACK_SOURCE_GENERATOR "TGZ")
+	SET(CPACK_SOURCE_PACKAGE_FILE_NAME
+  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+	SET(CPACK_SOURCE_IGNORE_FILES "/build/;/.bzr/;~$;${CPACK_SOURCE_IGNORE_FILES}")
+
+
+	SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE OFF)
+	SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 	INCLUDE(CPack)
  	INCLUDE(DebSourcePPA)
 	#INCLUDE(UploadPPA)
