--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,33 +25,39 @@ ADD_DEFINITIONS(-D_INTERNAL_ENGINE=1)
 
 
 # extracing version.
-execute_process(COMMAND git describe | sed -e 's/[^0-9]*//g' | cut -c1-1
+SET( FIXIT 's/[^0-9]*//g')
+ #| sed -e ${FIXIT} | cut -c1-1
+execute_process(COMMAND git describe
 	    OUTPUT_VARIABLE _major_version OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _major_version_failed)
 
-execute_process(COMMAND  git describe | sed -e 's/[^0-9].[^0-9]*//g' | cut -c1-1
+ #| sed -e 's/[^0-9].[^0-9]*//g' | cut -c1-1
+execute_process(COMMAND  git describe
 	    OUTPUT_VARIABLE _minor_version OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _minor_version_failed)
 
-execute_process(COMMAND git describe | sed -e 's/[^0-9].[^0-9].[^0-9]*//g' | cut -c1-2
+ #| sed -e 's/[^0-9].[^0-9].[^0-9]*//g' | cut -c1-2
+execute_process(COMMAND git describe
 	    OUTPUT_VARIABLE _revision_version OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _revision_version_failed)
 
-SET(ELT_VERSION_MAJOR${_vd_major})
-SET(ELT_VERSION_MINOR ${_vd_minor})
-SET(ELT_VERSION_REVISION ${_vd_revision})
-IF(VD_MAJOR_VERSION MATCHES "")
+SET(ELT_VERSION_MAJOR ${_major_version})
+SET(ELT_VERSION_MINOR ${_minor_version})
+SET(ELT_VERSION_REVISION ${_revision_version_failed})
+
+IF(ELT_VERSION_MAJOR MATCHES "")
 	SET(ELT_VERSION_MAJOR 0)
 ENDIF()
-IF(VD_MINOR_VERSION MATCHES "")
+IF(ELT_VERSION_MINOR MATCHES "")
 	SET(ELT_VERSION_MINOR 6)
 ENDIF()
-IF(VD_REVISION_VERSION MATCHES "")
+IF(ELT_VERSION_REVISION MATCHES "")
 	SET(ELT_VERSION_REVISION 8)
 ENDIF()
 
 
 SET(ELT_VERSION ${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}.${ELT_VERSION_REVISION})
+MESSAGE(STATUS "ELT version ${ELT_VERSION}.")
 
 SET(PROJECT_VERSION "${ELT_VERSION}")
 
@@ -81,12 +87,7 @@ SET(CPACK_COMPONENTS_ALL elt-bin ${LIBELT_COMPONENT} ${LIBELT-DEV_COMPONENT} elt
 
 
 
-#
-find_package(JNI)
-IF(JNI_FOUND)
-	message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
-	message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
-ENDIF()
+
 
 
 if(CMAKE_COMPILER_IS_MINGW)
@@ -373,22 +374,21 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt-${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}${ELT_VERSION_REVISION}")
 	SET(CPACK_DEBIAN_PACKAGE_SOURCE_FILES ${_srcFiles} )
 	SET(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES build CMakeFiles _CPack_Packages) #samplers docs
-	#SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
+	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
 	SET(CPACK_DEBIAN_CHANGELOG "" )
 	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
 
-	SET(CPACK_DEBIAN_DISTRIBUTION_NAME )
+	SET(CPACK_DEBIAN_DISTRIBUTION_NAME "")
 	
 	EXECUTE_PROCESS(COMMAND lsb_release -is
 	    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
 	    RESULT_VARIABLE _lsb_release_failed)
 	SET(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
-	STRING(TOLOWER ${CPACK_DEBIAN_DISTRIBUTION_NAME} CPACK_DEBIAN_DISTRIBUTION_NAME)
-	if( ${CPACK_DEBIAN_DISTRIBUTION_NAME} STREQUAL "ubuntu" )
+	STRING(TOLOWER CPACK_DEBIAN_DISTRIBUTION_NAME CPACK_DEBIAN_DISTRIBUTION_NAME)
+	IF( CPACK_DEBIAN_DISTRIBUTION_NAME STREQUAL "ubuntu" )
 		SET(CPACK_DEBIAN_DISTRIBUTION_RELEASES lucid maverick natty oneiric precise CACHE STRING "Release code-names of the distrubiton release")
-	endif()
+	ENDIF()
 
-	SET(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
 
 
 	SET(CPACK_SOURCE_GENERATOR "TGZ")
@@ -397,10 +397,13 @@ IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
 	SET(CPACK_SOURCE_IGNORE_FILES "/build/;/.bzr/;~$;${CPACK_SOURCE_IGNORE_FILES}")
 
 
+
 	SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE OFF)
 	SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 	INCLUDE(CPack)
  	INCLUDE(DebSourcePPA)
+
+	SET(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
 	#INCLUDE(UploadPPA)
 ENDIF()
 
@@ -418,6 +421,16 @@ if(WIN32)
 
 
 endif(WIN32)
+
+
+#
+IF(FALSE)
+	FIND_PACKAGE(JNI)
+	IF(JNI_FOUND)
+		message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
+		message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
+	ENDIF()
+ENDIF()
 
 
 #install(FILES "${CMAKE_CURRENT_BINARY_DIR}/elt-config
