Added find opengl.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,12 +84,7 @@ SET(CPACK_COMPONENTS_ALL elt-bin ${LIBELT_COMPONENT} ${LIBELT-DEV_COMPONENT} elt
 
 
 
-
-
-
-
-
-
+INCLUDE(FindOpenGL)
 if(CMAKE_COMPILER_IS_MINGW)
 	ADD_DEFINITIONS(-ELT_BUILD_NO_IFC_IMPORTER )
 endif()
