--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,11 +218,19 @@ ENDIF()
 
 
 #	OpenCL
-IF (CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)")
-ADD_DEFINITIONS(-DDONT_SUPPORT_OPENCL=1)
+FIND_PACKAGE(FindOpenCL)
+IF(FindOpenCL_FOUND)
+	INCLUDE(FindOpenCL)
+	IF(OpenCL_FOUND)
+		IF (CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)")
+		ADD_DEFINITIONS(-DDONT_SUPPORT_OPENCL=1)
+		ENDIF()
+
+		ADD_DEFINITIONS(-I${OpenCL_INCLUDE_DIRS})
+		ADD_DEFINITIONS(-L${OpenCL_LIBRARY})
+		ADD_DEFINITIONS(-lOpenCL)
+	ENDIF()
 ENDIF()
-
-
 
 
 #ADD_SUBDIRECTORY( src/ )
@@ -289,7 +297,7 @@ TARGET_LINK_LIBRARIES(EngineEx
 				 ${OPENGL_LIBRARIES}
 				 -lGLU
 				 -lX11
-				 -lOpenCL
+				 
 )
 
 
