Minor improvements on including OpenCL.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,11 +225,12 @@ IF(FindOpenCL_FOUND)
 	INCLUDE(OpenCL)
 ENDIF()
 IF(OpenCL_FOUND OR USE_OPENCL)
+	MESSAGE(STATUS "Using OpenCL")
 	ADD_DEFINITIONS(-DSUPPORT_OPENCL=1)
 
-	ADD_DEFINITIONS(-I${OpenCL_INCLUDE_DIRS})
-	ADD_DEFINITIONS(-L${OpenCL_LIBRARY})
-	ADD_DEFINITIONS(-lOpenCL)
+	ADD_DEFINITIONS(-I${OPENCL_INCLUDE_DIRS})
+	ADD_DEFINITIONS(-L${OPENCL_LIBRARIES})
+	SET(LINK_LIBRARIES "${LINK_LIBRARIES}-lOpenCL")
 ENDIF()
 
 
@@ -298,6 +299,7 @@ TARGET_LINK_LIBRARIES(EngineEx
 				 -lm
 				 -lopenal
 				 ${OPENGL_LIBRARIES}
+				 ${LINK_LIBRARIES}
 				 -lGLU
 				 -lX11
 				 
