Added binary strip for release binary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ if((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_
 		ADD_DEFINITIONS(-DNDEBUG)
 		ADD_DEFINITIONS(-O3)
 		SET(CMAKE_RELEASE TRUE)
+		SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
 	ELSE()
 		MESSAGE(STATUS "Compile for debug.")
 		ADD_DEFINITIONS(-D_DEBUG)
